fix(panel, dialog): Calcite dialog header fails to wrap for the longer text #12964

--- a/packages/calcite-components/src/components/panel/panel.scss
+++ b/packages/calcite-components/src/components/panel/panel.scss
@@ -167,6 +167,7 @@ slot[name="alerts"]::slotted(calcite-alert) {
 
   .heading-text-content {
     flex: 1 1 auto;
+    overflow: hidden;
   }
 
   .heading,
